--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^0.12.2
   barcode_scan: ^3.0.1
   sqflite: ^1.3.1+1
   path_provider: ^1.6.16
