--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   sqflite: ^1.3.1+1
   path_provider: ^1.6.16
   url_launcher: ^5.6.0
+  flutter_map: ^0.10.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
